add a bit of styling

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galactic Age Calculator</title>
+  <title>Super Galactic Age Calculator</title>
 </head>
 <body>
-    <h1>Galactic Age Calculator</h1>
+    <h1>Super Galactic Age Calculator</h1>
     <form id="form">
       <label for="age">Current Age: </label>
       <input id="age" type="text" name="age">
       <button type="submit">Calculate!</button>
     </form>
-    <p id="error" class="hidden">Please submit an numerial age larger than 0</p>;
+    <p id="error" class="hidden">Please submit an numerial age larger than 0</p>
     <div id="convertedAges" class="hidden">
       <h2 id="curr">Current Age: </h2>
       <h3>List of ages on different planets:</h3>
