minor update to include symbols and spaces in error

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <input id="age" type="text" name="age">
       <button type="submit">Calculate!</button>
     </form>
-    <p id="error" class="hidden">Please submit an numerial age larger than 0</p>
+    <p id="error" class="hidden">Please submit an age larger than 0 and doesn't include letters, spaces or symbols!</p>
     <div id="convertedAges" class="hidden">
       <h2 id="curr">Current Age: </h2>
       <h3>List of ages on different planets:</h3>
@@ -25,7 +25,7 @@
       <button type="submit">Calculate!</button>
     </form>
     <div id="convertedUntil">
-      <p id="error2" class="hidden">Please enter a valid age! (cannot be same as current age, or less or equal to 0)</p>
+      <p id="error2" class="hidden">Please enter a valid age! (cannot be same as current age, contain letters, spaces, symbols or less or equal to 0)</p>
       <div id="convertedUntilOutput" class="hidden">
         <h3> </h3>
         <ul>
