--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Super Galactic Age Calculator</h1>
     <form id="form">
-      <label for="age">Current Age </label>
+      <label for="age">Current Age: </label>
       <input id="age" type="text" name="age">
       <button type="submit">Calculate!</button>
     </form>
